test/prism_regression/invalid/malformed_sig.rb
# typed: strict
# disable-parser-comparison: true

sig,{params(x: Integer).void}
def f(x)
end
